Fix reward terms scrollbar

--- a/pathmind-webapp/frontend/styles/views/new-experiment-view.css
+++ b/pathmind-webapp/frontend/styles/views/new-experiment-view.css
@@ -10,10 +10,6 @@
     overflow: auto;
 }
 
-.new-experiment-view .view-section > vaadin-split-layout > vaadin-vertical-layout[slot~="primary"] {
-    overflow: visible;
-}
-
 .new-experiment-view .view-section > vaadin-horizontal-layout:first-child {
     flex: 0 0 auto;
 }
@@ -270,6 +266,10 @@
     display: inline-block;
 }
 
+.new-experiment-view .reward-function-header + vaadin-vertical-layout {
+  overflow: auto;
+}
+
 .new-experiment-view .reward-terms-wrapper .header-row {
   position: sticky;
   top: 0;
@@ -281,7 +281,7 @@
   padding: var(--lumo-space-xs);
   border-bottom: 1px solid var(--pm-grey-color-lightest);
   margin: 0 var(--lumo-space-xs);
-  z-index: 1;
+  z-index: 100;
 }
 
 .new-experiment-view .reward-terms-wrapper .header-row span:nth-child(1) {
